fixtures/frontend/milestone-2/invalid/custom-source-provider-argument-count-mismatch/main.aivi
provider custom.feed
    argument path: Text
    wakeup: providerTrigger

@source custom.feed
signal updates : Signal Int
